# ALTRUS-Robotic_Unit_System

./: README.md  commit_files_random_dates.sh
altrus-core/: README.md  auto_push.sh  demo.sh  intents.yaml  pyproject.toml
altrus-core/altrus/altrus/: module_test.py
altrus-core/altrus/altrus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
altrus-core/altrus/altrus/adapters/base/: adapter.py
altrus-core/altrus/altrus/adapters/grpc_adapter/: adapter.py
altrus-core/altrus/altrus/adapters/http_adapter/: adapter.py
altrus-core/altrus/altrus/adapters/ml_adapter/: adapter.py
altrus-core/altrus/altrus/adapters/ros_adapter/: adapter.py
altrus-core/altrus/altrus/cli/: altrus_cli.py  context.py
altrus-core/altrus/altrus/cli/commands/: intents.py  ledger.py  modules.py
altrus-core/altrus/altrus/core/: kernel.py
altrus-core/altrus/altrus/core/bus/: event_bus.py
altrus-core/altrus/altrus/core/fault/: detectors.py  fault_engine.py  (+2 more)
altrus-core/docs/: index.md  predemo.md
altrus-core/examples/: demo_run.py  ml_adapter_demo.py
altrus-core/tests/: test_intent_engine.py
altrus_navigation_framework/altru_framework/: package.xml  setup.cfg  setup.py
altrus_navigation_framework/altru_framework/altru_framework/cli/: main.py
altrus_navigation_framework/altru_framework/altru_framework/config/: manager.py
altrus_navigation_framework/altru_framework/altru_framework/generators/: navigation_generator.py  urdf_generator.py
altrus_navigation_framework/altru_framework/altru_framework/nodes/: gesture_intent.py  motion_executor.py  voice_intent.py
(+76 files in other folders)
