[project]
name = "altrus"
version = "0.1.1"
dependencies = [
    "pyyaml"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["altrus"]
include = ["altrus*"]

[project.scripts]
altrus = "altrus.cli.altrus_cli:main"

[tool.setuptools.package-data]
altrus = ["core/intent/policies/*.yaml"]

